@@ -23,7 +23,6 @@ package org.nova.http.client;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 
 import org.nova.json.ObjectMapper;
 
@@ -122,7 +121,7 @@ public class PathAndQuery
         }
 		this.sb.append(this.separator);
 		this.separator='&';
-		this.sb.append(key).append('=').append(URLEncoder.encode(value, StandardCharsets.UTF_8));
+		this.sb.append(key).append('=').append(URLEncoder.encode(value, "UTF-8"));
 		return this;
 	}
 	public PathAndQuery addQuery(String key,short value) throws Exception
